--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -1,7 +1,7 @@
 build:
   version: "1.2"
 
-accounts:
+cards:
   message: "Welcome to EazyBank cards related prod APIs "
   contactDetails:
     name: "Reine Aishwarya - Product Owner"
