--- a/cards.yml
+++ b/cards.yml
@@ -1,7 +1,7 @@
 build:
   version: "Cards 1.0"
 
-accounts:
+cards:
   message: "Welcome to EasyBank cards related local APIs "
   contactDetails:
     name: "John Doe - Developer"
