--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -1,7 +1,7 @@
 build:
   version: "1.2"
 
-accounts:
+loans:
   message: "Welcome to EazyBank lonas related prod APIs "
   contactDetails:
     name: "Reine Aishwarya - Product Owner"
