--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -5,7 +5,7 @@ cards:
   message: "Welcome to EazyBank cards related prod APIs "
   contactDetails:
     name: "Reine Aishwarya - Product Owner"
-    email: "aishwarya@eazybank.com"
+    email: "a@eazybank.com"
   onCallSupport:
     - (453) 392-4829
     - (236) 203-0384
